--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,18 @@
 plugins {
     id 'java'
     id 'groovy'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.20' // Update to latest version
+
 }
 
+configurations.configureEach {
+    resolutionStrategy {
+        force 'org.apache.groovy:groovy:4.0.5'
+        force 'org.apache.groovy:groovy-test:4.0.5'
+        force 'org.apache.groovy:groovy-json:4.0.5'
+        // Add other modules if needed
+    }
+}
 
 repositories {
     mavenCentral()
@@ -11,15 +21,22 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'lib', include: ['*.jar'])
-    implementation 'org.codehaus.groovy:groovy-all:3.0.19'
+    implementation 'org.apache.groovy:groovy-all:4.0.5'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
+
+
+
 
     implementation 'io.projectreactor:reactor-core:3.5.10'
     implementation 'org.springframework:spring-context:6.1.14'
     implementation 'org.springframework:spring-webflux:6.1.14'
+    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
+
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
-    testImplementation 'org.codehaus.groovy:groovy-test:3.0.19'
-    testImplementation 'org.spockframework:spock-core:2.3-groovy-3.0'
+    testImplementation 'org.apache.groovy:groovy-test:4.0.5'
+    testImplementation 'org.spockframework:spock-core:2.4-M4-groovy-4.0'
+
     testImplementation 'net.bytebuddy:byte-buddy:1.14.9'
 }
 
